fix project packaging + removing modb subgroup + configuring proxy and product with uber jar + improving identification of starter VMSs prior to exchange VMS_IDENTIFIERs