@@ -12,23 +12,15 @@
 
   <artifactId>sdk-embed</artifactId>
   <version>1.0-SNAPSHOT</version>
-
   <name>sdk-embed</name>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>18</maven.compiler.source>
-    <maven.compiler.target>18</maven.compiler.target>
-  </properties>
 
   <dependencies>
 
     <!-- modb -->
     <dependency>
-      <groupId>dk.ku.di.dms.vms.modb</groupId>
+      <groupId>dk.ku.di.dms.vms</groupId>
       <artifactId>modb</artifactId>
       <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
     </dependency>
 
     <!-- sdk-core -->
@@ -39,24 +31,5 @@
     </dependency>
 
   </dependencies>
-
-  <build>
-    <plugins>
-
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
-        <configuration>
-          <source>18</source>
-          <target>18</target>
-          <compilerArgs>
-            <arg>--add-modules</arg>
-            <arg>jdk.incubator.foreign</arg>
-          </compilerArgs>
-        </configuration>
-      </plugin>
-
-    </plugins>
-  </build>
 
 </project>
